fix bug with internal nav links not showing on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,7 @@ main {
 }
 
 /* steps page */
+
 #bridge {
     background: url(../images/pexels-snapwire.jpg) no-repeat center center / cover;
     height: 300px;
@@ -129,6 +130,7 @@ main {
 
 #nav-steps {
     width: 100%;
+    display: contents;
 }
 
 #nav-steps-list {
@@ -138,7 +140,7 @@ main {
     flex-direction: row;
     justify-content: space-evenly;
     list-style-type: none;
-    font-size: large;
+    font-size: x-small;
 }
 
 #nav-steps-list a {
